@@ -9,6 +9,9 @@ Revision history for DBIx-Class-Helper-Row-Enumeration:
 
   - Do not create a "0" method for unspecified coderef handers.
 
+  [Tests]
+  - Add tests of workarounds for autogenerated schema classes.
+
   [Other]
   - Minor code reformatting.
 
